    - addint(a, b)                    signed integer a+b
    - subint(a, b)                    signed integer a-b
    - add1int(n)                      signed integer n+1
    - sub1int(n)                      signed integer n-1
    - divint(a, b)                    signed integer a/b (floor)
    - modint(a, b)                    signed integer a%b (floor)
    - divrem(a, b)                    Euclidean quotient and remainder
    - fdivrem(a, b)                   Floored quotient and remainder
    - tdivrem(a, b)                   Truncated quotient and remainder
    - lshiftint(n, k)                 left shift n by k bits
    - rshiftint(n, k)                 right shift n by k bits (truncating)
    - rashiftint(n, k)                right shift n by k bits (flooring)
    - absint(n)                       integer absolute value
    - negint(n)                       integer negation
    - cmpint(a, b)                    integer comparison (like <=>)
    - signint(a, b)                   integer sign (-1,0,1)
    - random_safe_prime               for n-bit safe primes
    - is_gaussian_prime(a,b)          is a+bi a Gaussian prime
    - is_lucky(n)                     predicate for lucky number sieve
    - is_smooth(n,k)                  is n a k-smooth number
    - is_rough(n,k)                   is n a k-rough number
    - is_practical(n)                 is n a practical number
    - is_delicate_prime(n[,b])        is n a digitally delicate prime (base b)
    - is_sum_of_squares(n[,k])        can n be a sum of k squares (dflt k=2)
    - is_omega_prime(k,n)             is n divisible by exactly k primes
    - is_almost_prime(k,n)            does n have exactly k prime factors
    - is_powerfree(n[,k])             is n a k-powerfree number (default k=2)
    - is_powerful(n[,k])              is n a k-powerful number (default k=2)
    - is_perfect_power(n)             is n a perfect power (1,4,8,9,16,25,..)