@@ -5,7 +5,8 @@ use warnings;
 use Test::More;
 use Math::Prime::Util qw/ powint mulint addint subint
                           add1int sub1int
-                          divint modint divrem fdivrem tdivrem
+                          divint modint divceilint
+                          divrem fdivrem cdivrem tdivrem
                           lshiftint rshiftint rashiftint
                           absint negint cmpint signint/;
 use Math::BigInt;
@@ -50,13 +51,13 @@ my @anvals = (
   "18446744073709551616","-18446744073709551616",
   "18446744073709551617","-18446744073709551617",
 );
-my @quotients = (  # trunc, floor, euclidian
-  ["S + +", "9949242744253247", "64", "155456917878956", "155456917878956", "155456917878956"],
-  ["S - +", "-9949242744253247", "64", "-155456917878956", "-155456917878957", "-155456917878957"],
-  ["L + +",  "39458349850349850394853049583049",  "85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398579"],
-  ["L + -",  "39458349850349850394853049583049", "-85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398579"],
-  ["L - +", "-39458349850349850394853049583049",  "85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398580"],
-  ["L - -", "-39458349850349850394853049583049", "-85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398580"],
+my @quotients = (  # trunc, floor, ceiling, euclidian
+  ["S + +", "9949242744253247", "64", "155456917878956", "155456917878956", "155456917878957", "155456917878956"],
+  ["S - +", "-9949242744253247", "64", "-155456917878956", "-155456917878957", "-155456917878956", "-155456917878957"],
+  ["L + +",  "39458349850349850394853049583049",  "85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398580",  "459410982202026457344398579"],
+  ["L + -",  "39458349850349850394853049583049", "-85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398579", "-459410982202026457344398579"],
+  ["L - +", "-39458349850349850394853049583049",  "85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398579", "-459410982202026457344398580"],
+  ["L - -", "-39458349850349850394853049583049", "-85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398580",  "459410982202026457344398580"],
 );
 my @negshifts = (
   # n, k,  >>, >>arith
@@ -90,10 +91,12 @@ plan tests => 0
             + 2 + 2 + 1                      # modint
             + 2                              # divrem
             + 2                              # fdivrem
+            + 2                              # cdivrem
             + 2                              # tdivrem
-            + 5 * scalar(@quotients)         # signed bigint division
-            + 8                              # table 1.3 from Leijen 2001
-            + 8                              # divint with large neg returns
+            + 7 * scalar(@quotients)         # signed bigint division
+            + 12                             # table 1.3 from Leijen 2001
+            + 11                             # divint with large neg returns
+            + 1                              # cdivrem extra
             + 4 + 3*scalar(@negshifts)       # shiftint
             + 4                              # absint
             + 4                              # negint
@@ -175,7 +178,7 @@ foreach my $r (@subints) {
 }
 
 ###### divint
-ok(!eval { divint(0,0); }, "divint(1,0)");
+ok(!eval { divint(0,0); }, "divint(0,0)");
 ok(!eval { divint(1,0); }, "divint(1,0)");
 
 # For negative inputs, the div and mod operations might be different than Perl's builtins.
@@ -191,7 +194,7 @@ is_deeply( [map { divint(1024,$_) } 1..1025], \@qpos1024, "divint(1024,x) for 1 
 is_deeply( [map { divint(-1024,$_) } 1..1025], \@qneg1024, "divint(-1024,x) for 1 .. 1025" );
 
 ###### modint
-ok(!eval { modint(0,0); }, "modint(1,0)");
+ok(!eval { modint(0,0); }, "modint(0,0)");
 ok(!eval { modint(1,0); }, "modint(1,0)");
 
 is_deeply( [map { modint(1024,$_) } 1..1025], \@rpos1024, "modint(1024,x) for 1 .. 1025" );
@@ -200,31 +203,38 @@ is_deeply( [map { modint(-1024,$_) } 1..1025], \@rneg1024, "modint(-1024,x) for 
 is(modint("-1117091728166568014",59), 4, "modint(-1117091728166568014,59) = 4");
 
 ###### divrem
-ok(!eval { divrem(0,0); }, "divrem(1,0)");
+ok(!eval { divrem(0,0); }, "divrem(0,0)");
 ok(!eval { divrem(1,0); }, "divrem(1,0)");
 
 ###### fdivrem
-ok(!eval { fdivrem(0,0); }, "fdivrem(1,0)");
+ok(!eval { fdivrem(0,0); }, "fdivrem(0,0)");
 ok(!eval { fdivrem(1,0); }, "fdivrem(1,0)");
 
+###### cdivrem
+ok(!eval { cdivrem(0,0); }, "cdivrem(0,0)");
+ok(!eval { cdivrem(1,0); }, "cdivrem(1,0)");
+
 ###### tdivrem
-ok(!eval { tdivrem(0,0); }, "tdivrem(1,0)");
+ok(!eval { tdivrem(0,0); }, "tdivrem(0,0)");
 ok(!eval { tdivrem(1,0); }, "tdivrem(1,0)");
 
 
-###### large values through divint, modint, divrem, fdivrem, tdivrem
+###### large values through divint, divceilint, modint,
+######                      divrem, tdivrem, fdivrem, cdivrem
 for my $s (@quotients) {
-  my($signs, $n, $m, $qt, $qf, $qe) = @$s;
+  my($signs, $n, $m, $qt, $qf, $qc, $qe) = @$s;
   my($bn,$bm) = map { Math::BigInt->new($_) } ($n,$m);
-  my($rt, $rf, $re) = map { $bn - $bm * $_ } ($qt, $qf, $qe);
+  my($rt, $rf, $rc, $re) = map { $bn - $bm * $_ } ($qt, $qf, $qc, $qe);
   is( divint($n, $m), $qf, "large divint  $signs" );
   is( modint($n, $m), $rf, "large modint  $signs" );
+  is( divceilint($n, $m), $qc, "large divint  $signs" );
   is_deeply( [divrem($n, $m)], [$qe, $re], "large divrem  $signs" );
-  is_deeply( [fdivrem($n, $m)], [$qf, $rf], "large fdivrem  $signs" );
   is_deeply( [tdivrem($n, $m)], [$qt, $rt], "large tdivrem $signs" );
+  is_deeply( [fdivrem($n, $m)], [$qf, $rf], "large fdivrem $signs" );
+  is_deeply( [cdivrem($n, $m)], [$qc, $rc], "large cdivrem $signs" );
 }
 
-###### small values through divint, modint, divrem, fdivrem, tdivrem
+###### small values through divint, modint, divrem, fdivrem, cdivrem, tdivrem
 is( join(" ", tdivrem(8,3), tdivrem(8,-3), tdivrem(-8,3), tdivrem(-8,-3)),
     "2 2 -2 2 -2 -2 2 -2",
     "tdivrem with +/- 8,3" );
@@ -234,9 +244,15 @@ is( join(" ", divrem(8,3), divrem(8,-3), divrem(-8,3), divrem(-8,-3)),
 is( join(" ", fdivrem(8,3), fdivrem(8,-3), fdivrem(-8,3), fdivrem(-8,-3)),
     "2 2 -3 -1 -3 1 2 -2",
     "fdivrem with +/- 8,3" );
+is( join(" ", cdivrem(8,3), cdivrem(8,-3), cdivrem(-8,3), cdivrem(-8,-3)),
+    "3 -1 -2 2 -2 -2 3 1",
+    "cdivrem with +/- 8,3" );
 is( join(" ", divint(8,3), modint(8,3), divint(8,-3), modint(8,-3), divint(-8,3), modint(-8,3), divint(-8,-3), modint(-8,-3)),
     "2 2 -3 -1 -3 1 2 -2",
     "divint+modint with +/- 8,3" );
+is( join(" ", divceilint(8,3),divceilint(8,-3),divceilint(-8,3),divceilint(-8,-3)),
+    "3 -2 -2 3",
+    "divceilint with +/- 8,3" );
 
 is( join(" ", tdivrem(1,2), tdivrem(1,-2), tdivrem(-1,2), tdivrem(-1,-2)),
     "0 1 0 1 0 -1 0 -1",
@@ -247,13 +263,20 @@ is( join(" ", divrem(1,2), divrem(1,-2), divrem(-1,2), divrem(-1,-2)),
 is( join(" ", fdivrem(1,2), fdivrem(1,-2), fdivrem(-1,2), fdivrem(-1,-2)),
     "0 1 -1 -1 -1 1 0 -1",
     "fdivrem with +/- 1,2" );
+is( join(" ", cdivrem(1,2), cdivrem(1,-2), cdivrem(-1,2), cdivrem(-1,-2)),
+    "1 -1 0 1 0 -1 1 1",
+    "cdivrem with +/- 1,2" );
 is( join(" ", divint(1,2), modint(1,2), divint(1,-2), modint(1,-2), divint(-1,2), modint(-1,2), divint(-1,-2), modint(-1,-2)),
     "0 1 -1 -1 -1 1 0 -1",
     "divint+modint with +/- 1,2" );
+is( join(" ", divceilint(1,2),divceilint(1,-2),divceilint(-1,2),divceilint(-1,-2)),
+    "1 0 0 1",
+    "divceilint with +/- 1,2" );
 
 ###### divint and modint with interesting values
 is(divint("1895315831", -1), "-1895315831", "Divide 31-bit input by -1");
 is(divint("3483637757", -1), "-3483637757", "Divide 32-bit input by -1");
+is(divceilint("3483637757", -1), "-3483637757", "Divide 32-bit input by -1 (ceiling)");
 is(divint("6127303089832103323", -1), "-6127303089832103323", "Divide 63-bit input by -1");
 is(divint("13026328650942325963", -1), "-13026328650942325963", "Divide 64-bit input by -1");
 is(divint("14123555781055773270", 2), "7061777890527886635", "Divide 64-bit input by 2");
@@ -261,6 +284,12 @@ is(divint("12844039487317506779", "12844039487317506779"), 1, "Divide 64-bit inp
 is(divint(3, "12844039487317506779"), 0, "Divide small int by 64-bit input");
 # Note this is floor division:
 is(divint(-3, "12844039487317506779"), -1, "Divide negative small int by 64-bit input");
+# Now ceiling
+is(divceilint(3, "12844039487317506779"), 1, "Divide small int by 64-bit input");
+is(divceilint(-3, "12844039487317506779"), 0, "Divide negative small int by 64-bit input");
+
+###### cdivrem special test
+is( join(" ",cdivrem(3, "12844039487317506779")), "1 -12844039487317506776", "cdivrem with small quotient and 64-bit denominator shouldn't overflow IV" );
 
 ###### lshiftint
 is_deeply([map { lshiftint($_) } 0..50], [map { $_ << 1 } 0..50], "lshiftint(0..50)");
