@@ -65,7 +65,7 @@ sub mpu_public_regex {
       is_smooth is_rough is_powerful is_practical is_lucky
       sqrtint rootint logint lshiftint rshiftint rashiftint absint negint
       signint cmpint addint subint add1int sub1int mulint powint
-      divint modint divrem fdivrem tdivrem
+      divint modint divceilint divrem fdivrem cdivrem tdivrem
       miller_rabin_random
       lucas_sequence
       lucasu lucasv lucasuv lucasumod lucasvmod lucasuvmod
