@@ -24,8 +24,10 @@ Revision history for Perl module Math::Prime::Util
     - sub1int(n)                      signed integer n-1
     - divint(a, b)                    signed integer a/b (floor)
     - modint(a, b)                    signed integer a%b (floor)
+    - divceilint(a, b)                signed integer a/b (ceiling)
     - divrem(a, b)                    Euclidean quotient and remainder
     - fdivrem(a, b)                   Floored quotient and remainder
+    - cdivrem(a, b)                   Ceiling quotient and remainder
     - tdivrem(a, b)                   Truncated quotient and remainder
     - lshiftint(n, k)                 left shift n by k bits
     - rshiftint(n, k)                 right shift n by k bits (truncating)
